--- a/ERPWeb/Views/AgroConfiguration/DealarLadger.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DealarLadger.cshtml
@@ -65,7 +65,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <h7 class="text-bold">Total Bill:  </h7><span class="text-black font-italic" id="ddltotalbill"></span><br />
+                                    <h7 class="text-bold">Total Sales:  </h7><span class="text-black font-italic" id="ddltotalbill"></span><br />
                                     <h7 class="text-bold">Total Paid:  </h7><span class="text-black font-italic" id="ddltotalpaid"></span><br />
                                     <h7 class="text-bold">Total Return: </h7><span class="text-black font-italic" id="ddltotalreturn"></span><br />
                                     <h7 class="text-bold">Total Due: </h7> <span class="text-black font-italic" id="ddltotaldue"></span>
