--- a/ERPWeb/Views/AgroConfiguration/ProductCommision.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductCommision.cshtml
@@ -11,10 +11,10 @@
 
             <ul class="nav nav-tabs nav-pills bg-navy" id="custom-tabs-two-tab" role="tablist">
                 <li class="nav-item">
-                    <a class="nav-link active text-white" id="custom-tabs-two-commissiononproductList-tab" data-toggle="pill" href="#custom-tabs-two-commissiononproductList" role="tab" aria-controls="custom-tabs-two-commissiononproductList" aria-selected="false">Commission On Product List</a>
+                    <a class="nav-link active text-white" id="custom-tabs-two-commissiononproductList-tab" data-toggle="pill" href="#custom-tabs-two-commissiononproductList" role="tab" aria-controls="custom-tabs-two-commissiononproductList" aria-selected="false">Commission List</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" id="custom-tabs-two-commissiononproduct-tab" data-toggle="pill" href="#custom-tabs-two-commissiononproduct" role="tab" aria-controls="custom-tabs-two-commissiononproduct" aria-selected="false">Commission On Product</a>
+                    <a class="nav-link text-white" id="custom-tabs-two-commissiononproduct-tab" data-toggle="pill" href="#custom-tabs-two-commissiononproduct" role="tab" aria-controls="custom-tabs-two-commissiononproduct" aria-selected="false">Create Commission</a>
                 </li>
             </ul>
 
