--- a/ERPWeb/Views/AgroConfiguration/SalesReturnList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturnList.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "SalesReturnList";
+    ViewBag.Title = "ProductReturnList";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -16,7 +16,7 @@
 
                             <div class="col-md-2">
                                 <h5 class="float-left text-bold text-white">
-                                    Sales Return List
+                                    Product Return List
                                 </h5>
                             </div>
 
@@ -41,7 +41,7 @@
 
                             </div>
                             <div class="col-md-3">
-                                <a href="/AgroConfiguration/SalesReturn" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create SalesReturn</a>
+                                <a href="/AgroConfiguration/SalesReturn" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i>Create ProductReturn</a>
                             </div>
                         </div>
                     </div>
