--- a/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
@@ -9,7 +9,7 @@
                 <th style="vertical-align:middle">SL</th>
                 <th style="vertical-align:middle">MeasureMent Name</th>
                 <th style="vertical-align:middle">MeasureMent Item</th>
-                <th style="vertical-align:middle">UnitName</th>
+                <th class="hide" style="vertical-align:middle">UnitName</th>
                 <th style="vertical-align:middle">Status</th>
                 <th style="vertical-align:middle">Action</th>
             </tr>
@@ -29,7 +29,7 @@
                 <td class="hide">@item.MasterCarton</td>
                 <td class="hide">@item.InnerBox</td>
                 <td class="hide">@item.PackSize</td>
-                <td class="text-center">@item.UnitName</td>
+                <td class="text-center hide">@item.UnitName</td>
                 <td class="hide">@item.UnitId</td>
                 <td class="text-center">@item.Status</td>
                 <td class="hide">@item.UnitKG</td>
