--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
@@ -12,7 +12,7 @@
                 @*<th>Organization name</th>*@
                 @*<th>Depot Name</th>*@
                 <th>Raw Material</th>
-                <th>Unit Name</th>
+                <th>Unit</th>
                 <th>Status</th>
                 @*<th>Expire Date</th>*@
                 <th class="hide">organizationId</th>
