--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -228,7 +228,7 @@
                                                                 <input type="number" id="ddlttprice" name="ddlttprice" class="form-control form-control-sm" readonly />
                                                             </div>
 
-                                                            <div class="col-md-1">
+                                                            <div class="col-md-1 hide">
                                                                 <div class="form-group">
                                                                     <label for="ddlexpdate">Expire Date</label>
                                                                     <div class="input-group-sm date" id="datePicker">
