--- a/ERPWeb/Views/AgroConfiguration/_DealerGetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_DealerGetAgroSalesProductList.cshtml
@@ -7,6 +7,7 @@
     double total = 0;
     double totalpaid = 0;
     double totaldue = 0;
+    double totalcom = 0;
     string badge = string.Empty;
     string badges = string.Empty;
 }
@@ -22,7 +23,7 @@
             <th style="vertical-align:middle">Total Amount</th>
             <th style="vertical-align:middle">PaidAmount</th>
             <th style="vertical-align:middle">DueAmount</th>
-            <th style="vertical-align:middle">EntryUser</th>
+            <th style="vertical-align:middle">Commision</th>
 
         </tr>
     </thead>
@@ -44,7 +45,7 @@
                     <span class="@badges">@item.PaidAmount</span>
                 </td>
                 <td class="text-center">@item.DueAmount</td>
-                <td class="text-center">@User.UserName</td>
+                <td class="text-center">@item.CommisionAmount</td>
 
                 <td class="hide">
                     @{
@@ -67,6 +68,13 @@
                     }
                     @totaldue;
                 </td>
+                <td class="hide">
+                    @{
+                        double subtotalcom = item.CommisionAmount;
+                        totalcom += subtotalcom;
+                    }
+                    @totaldue;
+                </td>
 
             </tr>
         }
@@ -83,6 +91,7 @@
         <td colspan="1" style="text-align:center"><b>@total</b></td>
         <td colspan="1" style="text-align:center"><b>@totalpaid</b></td>
         <td colspan="1" style="text-align:center"><b>@totaldue</b></td>
-        <td colspan="1"></td>
+        <td colspan="1" style="text-align:center"><b>@totalcom</b></td>
+
     </tr>
 </table>
