--- a/ERPWeb/Views/AgroConfiguration/_DealerGetAgroSalesProductDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_DealerGetAgroSalesProductDetails.cshtml
@@ -95,10 +95,10 @@
                     <td class="text-center">@sl</td>
                     <td class="text-center">@item.FinishGoodProductName</td>
                     <td class="text-center">@item.MeasurementSize</td>
-                    <td class="text-center">@item.CurrentQTY</td>
-                    <td class="text-center text-bold">@item.Price</td>
+                    <td class="text-center">@item.TotalCurrentQTY</td>
+                    <td class="text-center text-bold">@item.Price.ToString("0.00")</td>
                     <td class="text-center">@item.Discount</td>
-                    <td class="text-center">@item.RDiscountTk</td>
+                    <td class="text-center">@item.RDiscountTk.ToString("0.00")</td>
                     @*<td class="hide">@item</td>*@
 
                 </tr>
@@ -110,10 +110,10 @@
                     <td class="text-center">@sl</td>
                     <td class="text-center">@item.FinishGoodProductName</td>
                     <td class="text-center">@item.MeasurementSize</td>
-                    <td class="text-center">@item.CurrentQTY</td>
-                    <td class="text-center text-bold">@item.Price</td>
+                    <td class="text-center">@item.TotalCurrentQTY</td>
+                    <td class="text-center text-bold">@item.Price.ToString("0.00")</td>
                     <td class="text-center">@item.Discount</td>
-                    <td class="text-center">@item.RDiscountTk</td>
+                    <td class="text-center">@item.RDiscountTk.ToString("0.00")</td>
                     @*<td class="hide">@item</td>*@
 
                 </tr>
