--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductDetails.cshtml
@@ -97,9 +97,9 @@
                         <td class="text-center">@item.FinishGoodProductName</td>
                         <td class="text-center">@item.MeasurementSize</td>
                         <td class="text-center">@item.Quanity</td>
-                        <td class="text-center text-bold">@item.Price</td>
+                        <td class="text-center text-bold">@item.Price.ToString("0.00")</td>
                         <td class="text-center">@item.Discount</td>
-                        <td class="text-center">@item.ProductTotal</td>
+                        <td class="text-center">@item.ProductTotal.ToString("0.00")</td>
                         @*<td class="hide">@item</td>*@
 
                     </tr>
@@ -112,9 +112,9 @@
                         <td class="text-center">@item.FinishGoodProductName</td>
                         <td class="text-center">@item.MeasurementSize</td>
                         <td class="text-center">@item.Quanity</td>
-                        <td class="text-center text-bold">@item.Price</td>
+                        <td class="text-center text-bold">@item.Price.ToString("0.00")</td>
                         <td class="text-center">@item.Discount</td>
-                        <td class="text-center">@item.ProductTotal</td>
+                        <td class="text-center">@item.ProductTotal.ToString("0.00")</td>
                         @*<td class="hide">@item</td>*@
 
                     </tr>
@@ -164,8 +164,8 @@
                         <td class="text-center">@item.FinishGoodProductName</td>
                         <td class="text-center">@item.MeasurementSize</td>
                         <td class="text-center">@item.Quanity</td>
-                        <td class="text-center text-bold">@item.Price</td>
-                        <td class="text-center">@item.ProductTotal</td>
+                        <td class="text-center text-bold">@item.Price.ToString("0.00")</td>
+                        <td class="text-center">@item.ProductTotal.ToString("0.00")</td>
                         <td class="text-center text-bold">@item.PackageName</td>
                         @*<td class="hide">@item</td>*@
 
@@ -179,8 +179,8 @@
                         <td class="text-center">@item.FinishGoodProductName</td>
                         <td class="text-center">@item.MeasurementSize</td>
                         <td class="text-center">@item.Quanity</td>
-                        <td class="text-center text-bold">@item.Price</td>
-                        <td class="text-center">@item.ProductTotal</td>
+                        <td class="text-center text-bold">@item.Price.ToString("0.00")</td>
+                        <td class="text-center">@item.ProductTotal.ToString("0.00")</td>
                         <td class="text-center text-bold">@item.PackageName</td>
                         @*<td class="hide">@item</td>*@
 
