--- a/ERPWeb/Views/AgroConfiguration/_GetPackageListview.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetPackageListview.cshtml
@@ -33,7 +33,7 @@
                             <td class="hide">@item.PackageId</td>
                             <td class="text-center">@item.PackageCode</td>
                             <td class="text-center">@item.PackageName</td>
-                            <td class="text-center">@item.TotalAmount</td>
+                            <td class="text-center">@item.TotalAmount.ToString("0.00")</td>
                             <td class="text-center">@item.StartDate.Value.ToString("dd-MMM-yyy")</td>
                             <td class="text-center">@item.EndDate.Value.ToString("dd-MMM-yyyy")</td>
                             <td class="text-center">
