--- a/ERPWeb/Views/AgroConfiguration/GetFinishGoodRecipeList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetFinishGoodRecipeList.cshtml
@@ -20,7 +20,7 @@
                         <div class="row">
                             <div class="col-md-3">
                                 <h5 class="text-center text-bold float-left text-white">
-                                    List Of Finish Good Recipe
+                                    Finish Goods & Recipe List
                                 </h5>
                             </div>
                             <div class="col-md-2">
