--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductEdit.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductEdit.cshtml
@@ -36,7 +36,7 @@
                         <input type="number" class="boxQuantity form-control form-control-sm " value="@item.Quanity" />
                         <span class="error hide">Quantity must be less then or equal Current Stock</span>
                     </td>
-                    <td class="text-center text-bold">@item.Price</td>
+                    <td class="text-center text-bold">@item.Price.ToString("0.00")</td>
 
                     <td class="text-center" style="width:15%">
                         <input type="number" class="discountTotal form-control form-control-sm " value="@item.Discount" />
@@ -64,7 +64,7 @@
                         <input type="number" class="boxQuantity form-control form-control-sm bg-danger " value="@item.Quanity" readonly />
                         <span class="error hide">Quantity must be less then or equal Current Stock</span>
                     </td>
-                    <td class="text-center text-bold">@item.Price</td>
+                    <td class="text-center text-bold">@item.Price.ToString("0.00")</td>
 
                     <td class="text-center" style="width:15%">
                         <input type="number" class="discountTotal form-control form-control-sm bg-danger" value="@item.Discount" readonly/>
