--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturn.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturn.cshtml
@@ -18,11 +18,11 @@
             <td style="width:15%"><b>@info.StockiestName</b></td>
             <td style="width:20%" class="hide"><b>@info.StockiestId</b></td>
             <td style="width:5%">Total</td>
-            <td style="width:10%"><b>@info.TotalAmount</b></td>
+            <td style="width:10%"><b>@info.TotalAmount.ToString("0.00")</b></td>
             <td style="width:5%">Paid</td>
-            <td style="width:10%"><b>@info.PaidAmount</b></td>
+            <td style="width:10%"><b>@info.PaidAmount.ToString("0.00")</b></td>
             <td style="width:5%">Due</td>
-            <td style="width:10%"><b>@info.DueAmount</b></td>
+            <td style="width:10%"><b>@info.DueAmount.ToString("0.00")</b></td>
 
         </tr>
     }
@@ -59,7 +59,7 @@
                     <td class="text-center">@item.MeasurementSize</td>
                     <td class="text-center hide">@item.TotalCurrentQTY</td>
                     <td class="text-center">@item.CurrentQTY</td>
-                    <td class="text-center">@item.Price</td>
+                    <td class="text-center">@item.Price.ToString("0.00")</td>
                     <td class="text-center" style="width:10%">
                         <input type="number" class="returnqty form-control form-control-sm" value="0" readonly />
                         <span class="error hide">Rerurn Quantity must be less then or equal sales qty</span>
@@ -91,7 +91,7 @@
                     <td class="text-center">@item.MeasurementSize</td>
                     <td class="text-center hide">@item.TotalCurrentQTY</td>
                     <td class="text-center bg-danger">@item.CurrentQTY</td>
-                    <td class="text-center">@item.Price</td>
+                    <td class="text-center">@item.Price.ToString("0.00")</td>
                     <td class="text-center " style="width:10%">
                         <input type="number" class="returnqty form-control form-control-sm" value="0" readonly />
                         <span class="error hide">Rerurn Quantity must be less then or equal sales qty</span>
@@ -123,7 +123,7 @@
                     <td class="text-center">@item.MeasurementSize</td>
                     <td class="text-center hide">@item.TotalCurrentQTY</td>
                     <td class="text-center">@item.CurrentQTY</td>
-                    <td class="text-center">@item.Price</td>
+                    <td class="text-center">@item.Price.ToString("0.00")</td>
                     <td class="text-center" style="width:10%">
                         <input type="number" class="returnqty form-control form-control-sm" value="0" />
                         <span class="error hide">Rerurn Quantity must be less then or equal sales qty</span>
