--- a/ERPWeb/Views/AgroConfiguration/CreateProductPrice.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateProductPrice.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "CreateStockiest";
+    ViewBag.Title = "CreateProductPrice";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
