--- a/ERPWeb/Views/Shared/_AdminDashboard.cshtml
+++ b/ERPWeb/Views/Shared/_AdminDashboard.cshtml
@@ -230,14 +230,14 @@
 
 
 
-        <footer class="main-footer fixed-bottom text-sm">
+        <!--<footer class="main-footer fixed-bottom text-sm">-->
             <!-- To the right -->
-            <div class="float-right d-none d-sm-inline ">
+            <!--<div class="float-right d-none d-sm-inline ">
                 Developed &amp; Maintained By <a href="http://playon24.com.bd/" target="_blank">PlayOn24</a>
-            </div>
+            </div>-->
             <!-- Default to the left -->
-            <strong>Copyright &copy; 2020 -</strong> All rights reserved.
-        </footer>
+            <!--<strong>Copyright &copy; 2020 -</strong> All rights reserved.
+        </footer>-->
 
         @if (User.Identity.IsAuthenticated)
         {
